Release Notes

* 2/20/2018
  * changed --keepUnmerged to kill jobsets if no events got started

* 2/16/2018
  * added more info when dispatchDBlock failed

* 2/15/2018
  * changed get/updateEvents to take local pilot owner into account

* 2/6/2018
  * locking job in active4 when ppE and getEvents

* 2/2/2018
  * fixed resurrect consumers for consumers killed in assigned

* 1/25/2018
  * added comprehensive heartbeat

* 1/22/2018
  * added es_preempted

* 1/18/2018
  * added checkEventsAvailability

* 1/15/2018
  * added nStandby

* 1/8/2018
  * using keepUnmerged to reassign jobs
  * to kill all consumers when a consumer is killed

* 12/6/2017
  * changed to avoid reattempts of ES jobs when jobseed is std or status is not online or brokeroff

* 11/29/2017
  * changed JD to allow xml=json

* 11/24/2017
  * added a hint to (un)throttle users
  * disabled OracleEI for https://cern.service-now.com/service-portal/view-incident.do?n=INC1529405

* 11/21/2017
  * allowing incexec for exhausted

* 11/20/2017
  * Using AES_MINEVENTSFORMCORE = max(AES_MINEVENTSFORMCORE, schedconfig.corecount)

* 11/10/2017
  * Changed HS06sec formula to actualcorecount * corepower * duration

* 11/8/2017
  * setting jobsetID in JEDI_Dataset_Contents
  * using separate site attribute for jobseed

* 11/1/2017
  * sending ES consumers to SCORE if there are not enough events
  * added harvester_id and worker_id in getJobs

* 10/10/2017
  * updated hint in getJobs

* 10/09/2017
  * setNoRetry to update also files in running status
  * added usePrefetcher

* 10/06/2017
  * added PQ.status=paused

* 10/05/2017
  * DDMSpec.getAssociatedEndpoint choosing endpoint with lowest order

* 10/02/2017
  * enabling TEST and SPECIAL endpoints

* 9/27/2017
  * added resurrectConsumers

* 9/26/2017
  * using DATADISK for analysis staging-in

* 9/12/2017
  * locking a file in getEventRanges

* 8/30/2017
  * metadata registration for ES files

* 8/17/2017
  * added registerEsFiles